// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge component > should match a snapshot 1`] = `
<DocumentFragment>
  <span
    class="mocked-styled-0 el-badge"
    role="status"
  >
    50%
  </span>
</DocumentFragment>
`;

exports[`Badge component > should match a snapshot for intent 1`] = `
<DocumentFragment>
  <span
    class="el-intent-primary el-badge"
    role="status"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Badge component > should match a snapshot for intent 2`] = `
<DocumentFragment>
  <span
    class="el-intent-neutral el-badge"
    role="status"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Badge component > should match a snapshot for intent 3`] = `
<DocumentFragment>
  <span
    class="el-intent-danger el-badge"
    role="status"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Badge component > should match a snapshot for intent 4`] = `
<DocumentFragment>
  <span
    class="el-intent-success el-badge"
    role="status"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Badge component > should match a snapshot for intent 5`] = `
<DocumentFragment>
  <span
    class="el-intent-warning el-badge"
    role="status"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Badge component > should match a snapshot for intent 6`] = `
<DocumentFragment>
  <span
    class="el-intent-pending el-badge"
    role="status"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`Badge component > should match a snapshot for intent 7`] = `
<DocumentFragment>
  <span
    class="el-intent-default el-badge"
    role="status"
  >
    Some Content
  </span>
</DocumentFragment>
`;

exports[`BadgeGroup component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-badge-group"
  >
    <div
      class="mocked-styled-2 el-badge-group-inner"
    >
      <span
        class="el-intent-default el-badge"
        role="status"
      >
        Some Content
      </span>
      <span
        class="el-intent-primary el-badge"
        role="status"
      >
        Some Content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
